syntax = "proto3";

package auth_v1;

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Ghaarp/auth/api/auth_v1;auth_v1";

service AuthV1 {

    rpc Create(CreateRequest) returns (CreateResponse){
        option (google.api.http) = {
            post: "/auth/v1/create"
            body: "*"
        };
    }

    rpc Get(GetRequest) returns (GetResponse){
        option (google.api.http) = {
            get: "/auth/v1"
        };
    }

    rpc Update(UpdateRequest) returns (UpdateResponse){
        option (google.api.http) = {
            patch: "/auth/v1/update"
            body: "*"
        };
    }

    rpc Delete(DeleteRequest) returns (DeleteResponse){
        option (google.api.http) = {
            delete: "/auth/v1"
        };
    }

}

enum Role {
    R_ADMIN = 0;
    R_USER = 1;
}

message PublicUser {
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
}

message PrivateUser {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    Role role = 5;
}

message CreateRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
}

message UpdateRequest {
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
}

message UpdateResponse {}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {}